<resources>
    <string name="app_name">PassMaster</string>
    <string name="title_home">My Passes</string>
    <string name="title_password_generator">New Password</string>
    <string name="title_passphrase_generator">New Passphrase</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit">Edit</string>
    <string name="cancel">cancel</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="website">Website</string>
    <string name="save">save</string>
    <string name="delete">delete</string>
    <string name="close">close</string>
    <string name="copy">copy</string>
    <string name="reload">reload</string>
    <string name="length">Length</string>
    <string name="A_Z">A - Z</string>
    <string name="a_z">a - z</string>
    <string name="_0_9">0 - 9</string>
    <string name="symbols"><![CDATA[!@#$%^&*]]></string>
    <string name="number_of_words">Number Of Words</string>
    <string name="include_number_at_end_of_random_word">Include Number at end of Random Word</string>
    <string name="separator">Separator</string>
    <string name="separator_default">-</string>
    <string name="no_entries_to_show">No Entries To Show</string>
</resources>