<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.robbie_mcgregor.passmaster.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_password_generator"
        android:name="com.robbie_mcgregor.passmaster.ui.password_generator.GeneratePasswordFragment"
        android:label="@string/title_password_generator"
        tools:layout="@layout/fragment_password_generator" />

    <fragment
        android:id="@+id/navigation_passphrase_generator"
        android:name="com.robbie_mcgregor.passmaster.ui.passphrase_generator.GeneratePassphraseFragment"
        android:label="@string/title_passphrase_generator"
        tools:layout="@layout/fragment_passphrase_generator" />
</navigation>